--- a/_data/home.yml
+++ b/_data/home.yml
@@ -6,7 +6,7 @@ navbar_entries:
     url: blog
 
   - title: website
-    url: https://www.abhinav.co
+    url: https://Gh0st-D3V.github.io
 
 project_entries:
   - title: Project 1
@@ -35,33 +35,33 @@ project_entries:
     url: overview-post
     desc: It also has a scalable vertical list (in case you need it)
 
-old_project_entries:
-  - title: Soopr
-    url: https://www.soopr.co
-    desc: Delight your readers - add beautiful share and like buttons easily to your websites 
-    highlight: NEW
+#old_project_entries:
+ # - title: Soopr
+  #  url: https://www.soopr.co
+   # desc: Delight your readers - add beautiful share and like buttons easily to your websites 
+    #highlight: NEW
 
-  - title: Cookie
-    url: https://github.com/abhinavs/cookie
-    desc: An open source landing website with supporting pages and integrated blog
+  #- title: Cookie
+   # url: https://github.com/abhinavs/cookie
+    #desc: An open source landing website with supporting pages and integrated blog
 
-  - title: Moonwalk
-    url: https://github.com/abhinavs/moonwalk
-    desc: A fast and minimalist Jekyll blog theme with clean dark mode
+  #- title: Moonwalk
+   # url: https://github.com/abhinavs/moonwalk
+    #desc: A fast and minimalist Jekyll blog theme with clean dark mode
 
-  - title: Humangous
-    url: https://www.humangous.co
-    desc: The better people know you, the better they collaborate
+ # - title: Humangous
+  #  url: https://www.humangous.co
+   # desc: The better people know you, the better they collaborate
 
 footer_entries:
-  - title: abhinav's homepage
-    url: https://www.abhinav.co
+  - title: Gh0st-D3V homepage
+    url: https://Gh0st-D3V.github.io
 
-  - title: twitter
-    url: https://twitter.com/abhinav
+  #- title: twitter
+  #  url: https://twitter.com/abhinav
 
   - title: github
-    url: https://github.com/abhinavs
+    url: https://github.com/Gh0st-D3V
 
   - title: feed
     url: feed.xml
@@ -80,22 +80,22 @@ misc_entries:
     post_list: true
     url: false
 
-  - title: moonwalk on the Internet
-    url: false
-    entries:
-      - title: on Github
-        url: https://github.com/abhinavs/moonwalk
+  #- title: moonwalk on the Internet
+   # url: false
+    #entries:
+     # - title: on Github
+      #  url: https://github.com/abhinavs/moonwalk
 
-      - title: originally built for abhinav's homepage
-        url: https://www.abhinav.co
+      #- title: originally built for abhinav's homepage
+       # url: https://www.abhinav.co
 
-      - title: this list is scalable and can be nested
-        url: false
-        entries:
-          - title: this is nested inside a nested list
-            url: false
+      #- title: this list is scalable and can be nested
+       # url: false
+        #entries:
+         # - title: this is nested inside a nested list
+          #  url: false
 
-          - title: it is easy to use, see _data/home.yml to see how to configure it.
-            url: false
+          #- title: it is easy to use, see _data/home.yml to see how to configure it.
+           # url: false
 
 
