--- a/_data/home.yml
+++ b/_data/home.yml
@@ -9,31 +9,32 @@ navbar_entries:
     url: https://Gh0st-D3V.github.io
 
 project_entries:
-  - title: Project 1
-    url: overview-post
-    desc: This is an example project, configured in _data/home.yml
+  - title: Knocker
+    url: knocker-script
+    desc: A masscan automation script
+    highlight: NEW
 
-  - title: Project 2
-    url: overview-post
-    desc: Projects are shown in card layout
+  - title: GOOSE
+    url: goose-python
+    desc: A python based FTP file grabber
 
-  - title: Project 3
-    url: overview-post
-    desc: You can control visibility from _config.yml file
+  #- title: Project 3
+  #  url: overview-post
+  #  desc: You can control visibility from _config.yml file
 
-  - title: Project 4
-    url: overview-post
-    desc: This project uses highlight markup, configured in _data/home.yml
-    highlight: WIP
+  #- title: Project 4
+  #  url: overview-post
+  #  desc: This project uses highlight markup, configured in _data/home.yml
+  #  highlight: WIP
 
-  - title: Project 5
-    url: overview-post
-    desc: Moonwalk also has horizontal list (used in header and footer)
-    highlight: WIP
+  #- title: Project 5
+  #  url: overview-post
+  #  desc: Moonwalk also has horizontal list (used in header and footer)
+  # highlight: WIP
 
-  - title: Project 6
-    url: overview-post
-    desc: It also has a scalable vertical list (in case you need it)
+  #- title: Project 6
+  #  url: overview-post
+  #  desc: It also has a scalable vertical list (in case you need it)
 
 #old_project_entries:
  # - title: Soopr
