--- a/_data/home.yml
+++ b/_data/home.yml
@@ -11,12 +11,12 @@ navbar_entries:
 
 project_entries:
   - title: Knocker
-    url: knocker-script.md
+    url: knocker-script
     desc: A masscan automation script
     highlight: NEW
 
   - title: GOOSE
-    url: GOOSE.py.md
+    url: GOOSE-py
     desc: A python based FTP file grabber
     highlight: NEW
 
