--- a/_data/home.yml
+++ b/_data/home.yml
@@ -16,7 +16,7 @@ project_entries:
     highlight: NEW
 
   - title: GOOSE
-    url: GOOSE-py
+    url: goose-py
     desc: A python based FTP file grabber
     highlight: NEW
 
