--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Gh0st-D3V
-author: Eirik Lrsen
+author: Eirik Larsen
 url: https://Gh0st-D3V.github.io # root address of the site
 description: > # description of the site (multiple lines allowed)
   Portfolio containing some of my past and future projects
