--- a/_data/home.yml
+++ b/_data/home.yml
@@ -10,20 +10,23 @@ navbar_entries:
     url: https://Gh0st-D3V.github.io
 
 project_entries:
+  - title: Gh0st_Protocol
+    url: ghost-script
+    desc: A post exploitation tool for Linux systems
+    highlight: NEW
+
   - title: Knocker
     url: knocker-script
     desc: A masscan automation script
-    highlight: NEW
 
   - title: GOOSE
     url: goose-py
     desc: A python based FTP file grabber
-    highlight: NEW
 
   - title: Warmind
     url: warmind-script
     desc: RDP Brute force automation script
-    highlight: New 
+
  #- title: Project 3
   #  url: overview-post
   #  desc: You can control visibility from _config.yml file
